<resources>
    <string name="app_name">HSK</string>
    <string name="tellusabout">Tell us about yourself</string>
    <string name="age_val">Swipe Left or Right to select your age</string>
    <string name="height_val">Swipe Left or Right to select your height</string>
    <string name="wieght_val">Swipe Left or Right to select your weight</string>
    <string name="family_deise">Do you or your family member have significant medical condition</string>
    <string name="family_des">TAP ON ALL APPLICABLE</string>
    <string name="welcomehsk">Welcome to \n HSK</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="accessdoctor">Access Thousands of trusted Doctors instantly.Never wait to feel better even again.</string>
    <string name="infosecond">Ask A \nHealth Query \nFor Free</string>
    <string name="infothird">Consult A \nDoctor Instantly</string>
    <string name="freeconsult">Get personalized consultation over text or audio/video. No waiting.</string>
    <string name="infofourth">Book \nAppointments</string>
    <string name="bookdoc">Book an appointment with a doctor to consult online or to visit at the clinic.</string>
    <string name="healthtips">Get Trusted \nHealth Tips</string>
    <string name="healthmsg">Receive trusted health tips from top doctors for you and your loved ones</string>
    <string name="hsk">HSK</string>
    <string name="createaccount">Create Your HSK Account</string>
    <string name="verify_reg">Verify Yourself</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="disease">Disease(if any)</string>
    <string name="register_msg">You\'ll receive an SMS to verify your identity, but we\'ll never spam. </string>
    <string name="term">By signing up,you agree to our <u>Term of Service ABD Privacy Policy</u></string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="otp_msg">You\'ll receive an SMS to verify your indentity, but we will never spam.</string>
    <string name="registration">Sign UP</string>
    <string name="nointernet">No internet connetion,please try again later.</string>
</resources>
