<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_screen">

    <TextView
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="21dp"
        android:gravity="center"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/welcomehsk"
        android:textColor="@color/white"
        android:textSize="30dp" />

    <TextView
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/one"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="21dp"
        android:fontFamily="@font/raleway_bold"
        android:gravity="center"
        android:text="@string/accessdoctor"
        android:textColor="@color/white"
        android:textSize="20dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_above="@+id/three"
        android:background="@color/white" />

    <RelativeLayout
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onClickfun"
            android:text="@string/next"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:text="@string/skip"
            android:textColor="@color/white" />
    </RelativeLayout>
</RelativeLayout>