<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/registration_header"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:text="@string/verify_reg"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="normal" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/linear_gradient_background"
        android:orientation="vertical"
        android:padding="20dp">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regis_edit_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserName"
                style="@style/edit_text_style"
                android:hint="@string/name"
                android:inputType="text"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <!--<android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regis_edit_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/edit_text_style"
                android:hint="@string/email"
                android:inputType="text" />

        </android.support.design.widget.TextInputLayout>-->

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/regis_edit_margin"
            app:errorEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etUserMobile"
                style="@style/edit_text_style"
                android:hint="@string/mobile"
                android:inputType="number"
                android:textColor="@color/white" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:gravity="center"
            android:text="@string/otp_msg"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/verify_now"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:background="@color/registration_header"
            android:gravity="center"
            android:text="VERIFY NOW"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/term"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </LinearLayout>
</LinearLayout>